chore(brand): migrate identity to RevOpsCircuitry with new logo and metadata

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Space+Grotesk:wght@400;500;600;700&display=swap"
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kazi RevOps | Revenue Systems Architect & Fractional Operations</title>
+  <title>RevOpsCircuitry | Revenue Systems Architect & Fractional Operations</title>
   <meta name="description"
     content="Scale your B2B revenue without chaos. We build the operational infrastructure (HubSpot, Zapier, Data) that powers predictable growth. Book your audit." />
   <meta name="keywords"
     content="Revenue Operations, Fractional RevOps, HubSpot Architect, B2B Sales Systems, Lead Gen Infrastructure" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Kazi RevOps | Revenue Systems Architect" />
+  <meta property="og:title" content="RevOpsCircuitry | Revenue Systems Architect" />
   <meta property="og:description"
     content="Scale your B2B revenue without chaos. Specialized RevOps infrastructure for high-growth teams." />
   <meta property="og:image" content="/profile.jpg" />
@@ -31,7 +31,7 @@
     {
       "@context": "https://schema.org",
       "@type": "ProfessionalService",
-      "name": "Kazi RevOps",
+      "name": "RevOpsCircuitry",
       "image": "https://kazi-revops.com/profile.jpg",
       "description": "Revenue Systems Architect & Fractional Operations for B2B.",
       "priceRange": "$$$",
