feat: set up new website with core React components and updated branding and meta information.

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Space+Grotesk:wght@400;500;600;700&display=swap"
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RevOpsCircuitry | Revenue Systems Architect & Fractional Operations</title>
+  <title>Web Operations & Reliability Strategy — RevOps Circuitry</title>
   <meta name="description"
-    content="Scale your B2B revenue without chaos. We build the operational infrastructure (HubSpot, Zapier, Data) that powers predictable growth. Book your audit." />
+    content="Operational excellence and reliability solutions for SaaS and scale tech teams. Clear workflows, resilient systems, and confident deployments." />
   <meta name="keywords"
     content="Revenue Operations, Fractional RevOps, HubSpot Architect, B2B Sales Systems, Lead Gen Infrastructure" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="RevOpsCircuitry | Revenue Systems Architect" />
+  <meta property="og:title" content="Web Operations & Reliability Strategy — RevOps Circuitry" />
   <meta property="og:description"
-    content="Scale your B2B revenue without chaos. Specialized RevOps infrastructure for high-growth teams." />
+    content="Operational excellence and reliability solutions for SaaS and scale tech teams. Clear workflows, resilient systems, and confident deployments." />
   <meta property="og:image" content="/profile.jpg" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://kazi-revops.com" />
